[metadata]
name = cva
version = 0.0.1
author = Scott Sirk
description = Collection/Analysis of Congressional Voting
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src